src/parser/snapshots/coconut__parser__expression__tests__expr_bp_infix-9.snap
---
source: src/parser/expression.rs
expression: "parse_expr(\"x == 1\".into()).unwrap().1"
---
{
  "type": "BinaryExpression",
  "operator": "==",
  "left": {
    "type": "Identifier",
    "name": "x",
    "start": 0,
    "end": 1
  },
  "right": {
    "type": "Literal",
    "value": 1.0,
    "start": 5,
    "end": 6
  },
  "start": 0,
  "end": 6
}
