src/parser/snapshots/coconut__parser__expression__tests__expr_bp_member_expr.snap
---
source: src/parser/expression.rs
expression: "parse_expr(\"x.y\".into()).unwrap().1"
---
{
  "type": "MemberExpression",
  "object": {
    "type": "Identifier",
    "name": "x",
    "start": 0,
    "end": 1
  },
  "property": {
    "type": "Identifier",
    "name": "y",
    "start": 2,
    "end": 3
  },
  "computed": false,
  "start": 0,
  "end": 3
}
