src/parser/snapshots/coconut__parser__expression__tests__expr_bp_prefix-3.snap
---
source: src/parser/expression.rs
expression: "parse_expr(\"+(+1)\".into()).unwrap().1"
---
{
  "type": "UnaryExpression",
  "operator": "+",
  "prefix": true,
  "argument": {
    "type": "UnaryExpression",
    "operator": "+",
    "prefix": true,
    "argument": {
      "type": "Literal",
      "value": 1.0,
      "start": 3,
      "end": 4
    },
    "start": 2,
    "end": 4
  },
  "start": 0,
  "end": 5
}
