src/parser/snapshots/coconut__parser__expression__tests__expr_bp_prefix-8.snap
---
source: src/parser/expression.rs
expression: "parse_expr(\"!x\".into()).unwrap().1"
---
{
  "type": "UnaryExpression",
  "operator": "!",
  "prefix": true,
  "argument": {
    "type": "Identifier",
    "name": "x",
    "start": 1,
    "end": 2
  },
  "start": 0,
  "end": 2
}
