src/parser/snapshots/coconut__parser__expression__tests__identifier_expr.snap
---
source: src/parser/expression.rs
expression: "parse_expr(\"myIdentifier\".into()).unwrap().1"
---
{
  "type": "Identifier",
  "name": "myIdentifier",
  "start": 0,
  "end": 12
}
