src/parser/snapshots/coconut__parser__expression__tests__member_expr-2.snap
---
source: src/parser/expression.rs
expression: "parse_member_expr(\"a[1]\".into()).unwrap().1"
---
{
  "type": "MemberExpression",
  "object": {
    "type": "Identifier",
    "name": "a",
    "start": 0,
    "end": 1
  },
  "property": {
    "type": "Literal",
    "value": 1.0,
    "start": 2,
    "end": 3
  },
  "computed": true,
  "start": 0,
  "end": 4
}
